--- a/index.html
+++ b/index.html
@@ -11,20 +11,38 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="Style\global.css">
+    <link rel="stylesheet" href="Style\global.css" />
   </head>
   <body>
-    <section>
-        <h1 class="text-center">Dice Game</h1>
-    </section>
-    <section>
-        <div>
-            <h2></h2>
-        </div>
-        <div>
-            <h2></h2>
-        </div>
-    </section>
+    <article class="my-5">
+      <h1 class="text-center">Dice Game</h1>
+    </article>
+    <article class="my-5 wrapper">
+      <h2 class="one-player" id="1P">Player 1</h2>
+      <h2 class="two-player" id="2P">Player 2</h2>
+      <div class="one-dice dice">
+        <span class="point"></span>
+        <span class="point"></span>
+        <span class="point"></span>
+        <span class="point"></span>
+        <span class="point"></span>
+        <span class="point"></span>
+        <span class="point"></span>
+        <span class="point"></span>
+        <span class="point"></span>
+      </div>
+      <div class="dice-point two-dice dice" id="2P">
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+        <div class="point"></div>
+      </div>
+    </article>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
