--- a/index.html
+++ b/index.html
@@ -13,36 +13,39 @@
     />
     <link rel="stylesheet" href="Style\global.css" />
   </head>
-  <body>
+  <body onclick="location.reload()">
     <article class="my-5">
       <h1 class="text-center">Dice Game</h1>
     </article>
-    <article class="my-5 wrapper">
+    <article class="my-2 wrapper">
       <h2 class="one-player" id="1P">Player 1</h2>
       <h2 class="two-player" id="2P">Player 2</h2>
       <div class="one-dice dice">
-        <span class="point"></span>
-        <span class="point"></span>
-        <span class="point"></span>
-        <span class="point"></span>
-        <span class="point"></span>
-        <span class="point"></span>
-        <span class="point"></span>
-        <span class="point"></span>
-        <span class="point"></span>
+        <span class="point" id="dice1"></span>
+        <span class="point" id="dice1"></span>
+        <span class="point" id="dice1"></span>
+        <span class="point" id="dice1"></span>
+        <span class="point" id="dice1"></span>
+        <span class="point" id="dice1"></span>
+        <span class="point" id="dice1"></span>
+        <span class="point" id="dice1"></span>
+        <span class="point" id="dice1"></span>
       </div>
-      <div class="dice-point two-dice dice" id="2P">
-        <div class="point"></div>
-        <div class="point"></div>
-        <div class="point"></div>
-        <div class="point"></div>
-        <div class="point"></div>
-        <div class="point"></div>
-        <div class="point"></div>
-        <div class="point"></div>
-        <div class="point"></div>
+      <div class="two-dice dice">
+        <span class="point" id="dice2"></span>
+        <span class="point" id="dice2"></span>
+        <span class="point" id="dice2"></span>
+        <span class="point" id="dice2"></span>
+        <span class="point" id="dice2"></span>
+        <span class="point" id="dice2"></span>
+        <span class="point" id="dice2"></span>
+        <span class="point" id="dice2"></span>
+        <span class="point" id="dice2"></span>
       </div>
     </article>
+    <h3 class="text-center">Tap on screen</h3>
+
+    <script src="index.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
