--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <span class="point" id="dice2"></span>
       </div>
     </article>
-    <h3 class="text-center">Tap on screen</h3>
+    <h3 class="text-center my-5">Tap Refresh Me!</h3>
 
     <script src="index.js"></script>
     <script
